--- a/client/index.html
+++ b/client/index.html
@@ -12,26 +12,28 @@
     <link rel="stylesheet" href="bower_components/ng-emoticons/src/ng-emoticons.css">  
   </head>
   <body ng-controller="mainController" ng-init="clickToOpen()">
-    <div class="container room" style="height:600px;margin-top:100px;"> 
+    <div class="container room"> 
       <div class="row" >
-          <div class="col-xs-3 user_list">
+          <div class="hidden-xs col-sm-3 user_list">
             <div class="row head">
               <div class="col-xs-12">
                 <h3><i class="fa fa-users"></i> User list</h3>
                </div> 
             </div>
             <hr class="ray">
-            <ul id="users" ng-cloak>
-              <li ng-repeat="user in users">
-                  <img ng-src="{{getImageSource(user.gender)}}" alt="" width="50px" height="50px">
-                  <span >{{user.name}} <small>({{user.email}})</small></span>
-              </li>
-            </ul>
+            <div class="col-xs-12 chat_room" ng-cloak scroll-glue-bottom>
+              <ul id="users" ng-cloak>
+                <li ng-repeat="user in users">
+                    <img ng-src="{{getImageSource(user.gender)}}" alt="" width="50px" height="50px">
+                    <span >{{user.name}} <small>({{user.email}})</small></span>
+                </li>
+              </ul>
+            </div>
            </div>
-          <div class="col-xs-9">
+          <div class="col-xs-12 col-sm-9">
             <div class="row head">
               <div class="col-xs-8">
-                <h3>Chat Panal <i class="fa fa-weixin"></i></h3>
+                <h3>Chat Panel <i class="fa fa-weixin"></i></h3>
               </div>
               <div class="col-xs-4" ng-cloak ng-show="user">
                 <img ng-src="{{getImageSource(user.gender)}}" alt="" width="50px" height="50px">
@@ -40,31 +42,36 @@
             </div>
             <hr class="ray">
             <div class="col-xs-12 chat_room" ng-cloak scroll-glue-bottom>
-            <ul id="messages" class="chat_message" class="col-xs-12">
-              <li ng-repeat="message in messages">
-                <img ng-src="{{getImageSource(message.user.gender)}}" alt="">
-                <h4><b>{{message.user.name}}</b></h4>
-                <p><strong ng-bind-html="message.messages | emoticons"></strong></p>
-                <p>{{timestampToDate(message.timestamp)}}</p>
-              </li>
-              <div class="clearfix"></div>
-            </ul>
+              <ul id="messages" class="chat_message" class="col-xs-12">
+                <li ng-repeat="message in messages">
+                <div class="user_message">
+                  <img ng-src="{{getImageSource(message.user.gender)}}" alt="">
+                  <p><b>{{message.user.name}}</b></p>
+                 </div>
+                 <p class="pull-right">{{timestampToDate(message.timestamp)}}</p>
+                 <p class="message_text" ng-bind-html="message.messages | emoticons"></p>
+                 <div class="clearfix"></div>
+                </li>
+                <div class="clearfix"></div>
+              </ul>
+
             </div>
           </div>
         </div>  
     </div> 
     <div class="container" style="margin-top:20px;"> 
-    <div class="row chat_box_input ">
-            <form action="" class="form-inline" novalidate>
-              <div class="form-group col-sm-10">
-                <input class="form-control" style="width:100%" ng-model="newMessage" placeholder="Message <3 Here" id="chatbox" ng-bind-html="text | emoticons" />
-            </div>
-            <div class="form-group col-sm-2">
-                <button style="width:100%" type="submit" ng-click="formSubmit(newMessage,$event)" class="btn btn-success">Send</button>
-            </div>
-            </form>
-    </div>
-         </div>
+      <div class="row chat_box_input ">
+              <form action="" class="form-inline" name="input_message" novalidate>
+                <div class="form-group col-sm-10">
+                  <input class="form-control" style="width:100%" ng-model="newMessage" placeholder="Message with <3 Here" id="chatbox" ng-bind-html="text | emoticons" required/>
+              </div>
+              <div class="form-group col-sm-2">
+                  <button style="width:100%" type="submit" ng-disabled="input_message.$invalid" ng-click="formSubmit(newMessage,$event)" class="btn btn-success">Send</button>
+              </div>
+              <div class="clearfix"></div>
+              </form>
+        </div>
+      </div>
      </div>
        
     <script data-main="./scripts/main" src="./bower_components/requirejs/require.js"></script>
